--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "babel-standalone": "^6.26.0",
     "d3": "^5.6.0",
-    "d3-svg-legend": "^2.25.6",
     "d3fc": "14.0.19"
   }
 }
